--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,10 @@
+@import "../app/assets/css/utilities/font.css";
+@import "../app/assets/css/utilities/variables.css";
+@import "../app/assets/css/components/navbar.css";
 @import "tailwindcss";
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+@import "tw-animate-css";
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "app-font-300";
+  background-color: var(--background);
 }
