--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,12 @@
-@import "../app/assets/css/utilities/font.css";
-@import "../app/assets/css/utilities/variables.css";
-@import "../app/assets/css/components/navbar.css";
+@import "../assets/css/utilities/font.css";
+@import "../assets/css/utilities/variables.css";
+@import "../assets/css/components/navbar.css";
+@import "../assets/css/pages/home.css";
+@import "../assets/css/components/input.css";
+@import "../assets/css/components/select.css";
 @import "tailwindcss";
 @import "tw-animate-css";
-
+/*  ---break--- */
 body {
   font-family: "app-font-300";
   background-color: var(--background);
