--- a/src/assets/css/pages/home.css
+++ b/src/assets/css/pages/home.css
@@ -30,6 +30,7 @@
       box-shadow: -1px 1px 13px 3px rgba(0, 0, 0, 0.06);
       cursor: pointer;
       width: 100%;
+      transition: transform 0.3s ease;
       img {
         width: 100%;
         height: 200px;
@@ -57,6 +58,9 @@
             }
           }
         }
+      }
+      &:hover {
+        transform: scale(1.05);
       }
     }
   }
